--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.3",
     "sequelize": "^6.32.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   }
 }
