--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@a2seven/yoo-checkout": "^1.1.4",
     "@types/express": "^4.17.17",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "qrcode": "^1.5.3",
     "sequelize": "^6.32.1",
     "ts-node": "^10.9.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yookassa": "^0.1.1"
   }
 }
