--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.3",
     "sequelize": "^6.32.1",
+    "socket.io": "^4.7.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
     "yookassa": "^0.1.1"
